[gd_scene load_steps=15 format=2]

[ext_resource path="res://tscn/Snake_Laser.gd" type="Script" id=1]
[ext_resource path="res://assets/glowing_circle.png" type="Texture" id=2]

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.657993, 0.702273 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=15]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=16]
offsets = PoolRealArray( 0, 0.142857, 0.827068, 1 )
colors = PoolColorArray( 0.619608, 0.894118, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.619608, 0.894118, 1, 1 )

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.845528 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=18]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 300.0
scale = 0.4
color_ramp = SubResource( 12 )

[sub_resource type="Curve" id=19]
max_value = 100.0
_data = [ Vector2( 0, 100 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=20]
flag_disable_z = true
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping_curve = SubResource( 10 )
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[node name="Snake_Laser" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 15 )
texture = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
z_index = -10
points = PoolVector2Array( 0, 0, 1000, 0 )
width = 9.0
default_color = Color( 0.619608, 0.894118, 1, 1 )
gradient = SubResource( 16 )

[node name="BeamParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
local_coords = false
process_material = SubResource( 18 )
texture = ExtResource( 2 )

[node name="CollisionParticle" type="Particles2D" parent="."]
scale = Vector2( 0.8, 0.8 )
emitting = false
lifetime = 0.3
process_material = SubResource( 20 )
texture = ExtResource( 2 )
